--- a/content/Об этом сайте.md
+++ b/content/Об этом сайте.md
@@ -1,6 +1,6 @@
-Это публичный волт* Ильи Пухова.
+Это публичная база знаний Ильи Пухова.
 По всем вопросам пишите мне в телеграм @ilyapukhov.
 
-Вотл — англицизм от vault — сейф, хранилище. Обозначает базу данных в популярном приложении для ведения базы знаний Obsidian.
+База знаний (vault) сейф, хранилище, в популярном приложении Obsidian.
 
-В моем волте я публикую заметки, статьи, фото, видео и другие материалы, а так же создаю связи (обратные ссылки) между файлами, чтобы было удобно искать. Заодно получается красивый граф (красивый график, похожий на паутину). Посмотрите.
+Здесь я публикую заметки, статьи, фото, видео и другие материалы, а так же создаю связи (обратные ссылки) между файлами, чтобы было удобно искать. Заодно получается красивый граф (красивый график, похожий на паутину). Посмотрите.
