Quartz sync: Jul 21, 2024, 8:55 AM

--- a/content/Осознанность/7 столпов осознанности. Мнение кандидата наук орг. психологии.md
+++ b/content/Осознанность/7 столпов осознанности. Мнение кандидата наук орг. психологии.md
@@ -4,7 +4,9 @@ draft:
 tags:
   - Осознанность
 ---
-Если вы задумались о том, можно ли развивать осознанность во взрослом возрасте — ни мысли больше. Можно. Хорошим началом будет разобраться из чего эта самая осознанность состоит.
+Если вы задумались о том, можно ли развивать осознанность во взрослом возрасте — ни мысли больше. Можно. Для начала хорошо бы разобраться что это такое и из чего состоит.
+
+![[Осознанность определение]]
 
 Вполне научное исследование осознанности кандидатом наук по организационной психологии Ташей Эрих пролило свет на то что такое осознанность и как ее развивать. Здесь нет эзотерики, и от вас не требуется принимать какую-либо веру или философию. Понятные, прагматичные, применимые на пракитке инструкции, как американцы любят.
 
@@ -12,7 +14,7 @@ tags:
 
 Разумеется типология осознанности Эрих не единственная. Но она не плохая, и прямо сейчас я собираюсь написать именно про нее. В статье на примерах расскажу про 7 составных частей, аспектов, факторов осознанности которые выделила команда исследователей.
 
-Разумеется это не все что нужно знать, чтобы развивать осознанность. Но для начала не плохо. Ну что, читаем?
+Это не все что нужно знать, чтобы развивать осознанность. Но для начала не плохо. Ну что, читаем?
 
 Поехали!
 
