Quartz sync: Jul 21, 2024, 9:01 AM

--- a/content/Осознанность/65% людей переоценивают свой уровень осознанности.md
+++ b/content/Осознанность/65% людей переоценивают свой уровень осознанности.md
@@ -1,3 +1,10 @@
+---
+title: <% tp.file.title %>
+draft: 
+tags:
+  - Осознанность
+---
+
 ![[Осознанность определение]]
 
 Один из современных тестов осознанности включает ответ на вопросы респондентом, плюс оценку респондента по тем же параметрам одного его близкого человека.
