--- a/content/Осознанность/Если коллеги (босс) не осознанны. Методология работы..md
+++ b/content/Осознанность/Если коллеги (босс) не осознанны. Методология работы..md
@@ -1,3 +1,10 @@
+---
+title: <% tp.file.title %>
+draft: 
+tags:
+  - Осознанность
+---
+
 « ...если ваш коллега (босс) сварлив и абьюзивен ... вообразите закадровый смех. Мыслено сопровождайте его высказывания смехом за кадром, как в комедии. Ситуация станет намного менее травматичной, иногда даже забавной ...»
 
 Это один из способ снизить влияние неосознанного коллеги на нашу работу. Но иногда мы можем помочь ему вообще изменить поведение. Ниже мои заметки (и перевод) статьи профессора Таши Эрих для Harward Business Review о том как работать с неосознанными коллегами.
