--- a/content/Осознанность/Осознанность определение.md
+++ b/content/Осознанность/Осознанность определение.md
@@ -1,1 +1,8 @@
+---
+title: <% tp.file.title %>
+draft: 
+tags:
+  - Осознанность
+---
+
 Осознанность — способность понимать себя и то, каким вас видят другие.
